--- a/package.json
+++ b/package.json
@@ -5,12 +5,14 @@
   "main": "bot.js",
   "dependencies": {
     "discord.js": "^11.2.1",
+    "lodash": "^4.17.4",
     "node-opus": "^0.2.7",
-    "request": "^2.83.0"
+    "request": "^2.83.0",
+    "request-promise": "^4.2.2"
   },
   "devDependencies": {},
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node bot.js"
   },
   "repository": {
     "type": "git",
