get lookup working for players by last name. returns players who have multiple cards as well as duplicate last names

--- a/config.sample.json
+++ b/config.sample.json
@@ -1,5 +1,5 @@
 {
 	"OWNERID": "Your Discord ID (Numeric - get by right clicking your User in Discord)",
 	"PREFIX": "!",
-	"TOKEN": ""
+	"TOKEN": "Your Discord Bot Token"
 }
