--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "A Discord Chatbot for FUT/Football Events Edit",
   "main": "bot.js",
   "dependencies": {
+    "diacritics": "^1.3.0",
     "discord.js": "^11.2.1",
     "lodash": "^4.17.4",
     "node-opus": "^0.2.7",
