--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
-# Bot Config!!
-config.json
+# Deployment secrets
+now-secrets.json
 
 # Logs
 logs
@@ -60,3 +60,4 @@ typings/
 # dotenv environment variables file
 .env
 
+.DS_Store
