--- a/package.json
+++ b/package.json
@@ -1,19 +1,26 @@
 {
   "name": "goalbot",
-  "version": "0.0.1",
-  "description": "A Discord Chatbot for FUT/Football Events Edit",
+  "version": "1.0.0",
+  "description": "A Discord Chatbot for FUT/Football Events",
   "main": "bot.js",
   "dependencies": {
+    "common-tags": "^1.8.0",
+    "country-list": "^1.1.0",
     "diacritics": "^1.3.0",
-    "discord.js": "^11.2.1",
+    "discord.js": "^11.4.2",
+    "discord.js-commando": "^0.10.0",
+    "emoji-flag": "^1.1.0",
     "lodash": "^4.17.4",
     "node-opus": "^0.2.7",
+    "now-env": "^3.1.0",
     "request": "^2.83.0",
-    "request-promise": "^4.2.2"
+    "request-promise": "^4.2.2",
+    "uws": "^99.0.0"
   },
   "devDependencies": {},
   "scripts": {
-    "start": "node bot.js"
+    "start": "node index",
+    "now-start": "node index"
   },
   "repository": {
     "type": "git",
