Stay on Now.sh version 1 for now, version 2 I don’t know how to get to stay alive yet

--- a/now.json
+++ b/now.json
@@ -2,5 +2,6 @@
   "env": {
     "DISCORD_TOKEN": "@goalbot-discord-token",
     "DISCORD_OWNERID": "@goalbot-discord-ownerid"
-  }
+  },
+  "version": 1
 }
