--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "bot.js",
   "dependencies": {
     "common-tags": "^1.8.0",
+    "convert-units": "^2.3.4",
     "country-list": "^1.1.0",
     "diacritics": "^1.3.0",
     "discord.js": "^11.4.2",
