--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "A Discord Chatbot for FUT/Football Events",
   "main": "bot.js",
   "dependencies": {
+    "ascii-table": "0.0.9",
     "common-tags": "^1.8.0",
     "convert-units": "^2.3.4",
     "country-list": "^1.1.0",
