--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "emoji-flag": "^1.1.0",
     "exclamation": "^0.1.0",
     "lodash": "^4.17.11",
+    "moment": "^2.23.0",
     "node-opus": "^0.2.7",
     "now-env": "^3.1.0",
     "request": "^2.88.0",
