--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "bot.js",
   "dependencies": {
     "ascii-table": "0.0.9",
+    "cheerio": "^1.0.0-rc.3",
     "common-tags": "^1.8.0",
     "convert-units": "^2.3.4",
     "country-list": "^1.1.0",
